# dvc-http

./: .cruft.json  .gitignore  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml  setup.cfg
.github/workflows/: release.yaml  release.yaml.rej  tests.yaml
dvc_http/: __init__.py  client.py  retry.py
dvc_http/tests/: cloud.py  cloud.py.rej  conftest.py.rej  fixtures.py  fixtures.py.rej  httpd.py  test_config.py  test_dvc.py  test_dvc.py.rej
