[metadata]
description = http plugin for dvc
name = dvc-http
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache License 2.0
license_file = LICENSE
url = http://dvc.org
project_urls =
    Documentation = https://dvc.org/doc
    Source = https://github.com/iterative/dvc-http
download_url = https://github.com/iterative/dvc-http
keywords = dvc, http
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
setup_requires =
    setuptools>=48
    setuptools_scm[toml]>=6.3.1
python_requires = >=3.8
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    dvc
    fsspec[http]
    aiohttp-retry>=2.5.0

[options.extras_require]
tests =
    dvc[testing]
    # Test requirements
    pytest==6.2.5
    pytest-cov==3.0.0
    pytest-xdist==2.4.0
    pytest-mock==3.6.1
    flaky==3.7.0
    rangehttpserver==1.2.0
    pylint==2.11.1
    mypy==0.910
    types-requests==2.25.11

[flake8]
ignore=
    E203, # Whitespace before ':'
    E266, # Too many leading '#' for block comment
    W503, # Line break occurred before a binary operator
    P1,  # unindexed parameters in the str.format, see:
    # https://pypi.org/project/flake8-string-format/
max_line_length = 79
max-complexity = 15
select = B,C,E,F,W,T4,B902,T,P
show_source = true
count = true
